@@ -1,0 +1,16 @@
+=============
+ TODO List
+=============
+
+libotp.c
+ * Key generation
+
+paranoia.c
+ * Enhanced session management
+ * Hide all these annoying messages
+ * Free the key list
+ * Entropy checks and warnings
+
+other
+ * Design a simple web page
+ * Debian/Ubuntu package
