@@ -12,6 +12,7 @@ Simon Wenner:
  * Paranoia: Key list is generated from files
  * Paranoia: Basic session initialisation
  * Paranoia: Basic session closing
+ * Paranoia: Encryptet messages are labelled
 
 Christan Wäckerlin:
  * One-time pad documentation
@@ -23,6 +24,8 @@ Christan Wäckerlin:
  * Keyfile templates added
  
 
-Known Bugs:
+
+Known bugs:
  * /otp info is only working after one message was received
+ * the first encrypted sent message is not marked with <secure>
  * leaving and returning to a session works under certain circumstances
